force-app/main/default/objects/PS_Project_Team_Member__c/PS_Project_Team_Member__c.object-meta.xml
<CustomObject>
    <description>SOX object - Represents Professional Services Users that worked on the Opportunity and will be working on the PS Project.</description>
    <label>PS Project Team Member</label>
    <nameField>
        <displayFormat>PSM-{0000000}</displayFormat>
        <label>PS Project Team Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PS Project Team Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>