force-app/main/default/objects/PS_Project_Team_Member__c/fields/Do_not_automatically_assign_subtasks__c.field-meta.xml
<CustomField>
    <fullName>Do_not_automatically_assign_subtasks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not automatically assign subtasks</label>
    <type>Checkbox</type>
</CustomField>