force-app/main/default/objects/PS_Project_Team_Member__c/fields/PS_Project__c.field-meta.xml
<CustomField>
    <fullName>PS_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PS Project</label>
    <referenceTo>PS_Project__c</referenceTo>
    <relationshipLabel>PS Project Team Members</relationshipLabel>
    <relationshipName>PS_Project_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>