force-app/main/default/objects/PS_Project_Team_Member__c/fields/Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Member</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>PS_Project_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>